Correction du contraste et de la taille de la police

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: black;
 }
 
 .d-bloc .a-btn:hover,
@@ -231,7 +231,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+    color: black;
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -284,7 +284,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 4rem;
 }
 
 .navbar {
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black;
 }
 
 .container {
@@ -677,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 1.5rem;
 }
 
 .tight-width-whitespace {
@@ -688,6 +688,7 @@ p {
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
+    font-weight: bold;
 }
 
 .cta-hero {
@@ -713,7 +714,7 @@ h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: black;
 }
 
 .med-width-whitespace {
@@ -723,11 +724,11 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: black;
 }
 
 h4 {
-    color: #333333!important;
+    color: black;
 }
 
 .icons {
@@ -736,7 +737,8 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: black;
+    font-weight: bold;
 }
 
 .portfolio-thumb {
@@ -759,7 +761,7 @@ h4 {
 
 .bold-link {
     font-weight: 900;
-    text-decoration: underline!important;
+    text-decoration: underline;
 }
 
 .bgc-white {
@@ -775,7 +777,8 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white;
+    font-weight: bold;
 }
 
 .btn-atomic-tangerine {
